# serializer version: 1
# name: TestInsight.test_insight_funnels_insightsql_breakdown
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT sum(step_1) AS step_1,
         sum(step_2) AS step_2,
         arrayMap(x -> if(isNaN(x), NULL, x), [avgArrayOrNull(step_1_conversion_times)])[1] AS step_1_average_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [medianArrayOrNull(step_1_conversion_times)])[1] AS step_1_median_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [arrayReduce('median', arrayFlatten(groupArray(arrayFlatten(groupArray(total_conversion_times))) OVER ()))])[1] AS total_median_conversion_time,
         groupArray(row_number) AS row_number,
         final_prop AS final_prop
  FROM
    (SELECT countIf(ifNull(notEquals(bitAnd(steps_bitfield, 1), 0), 1)) AS step_1,
            countIf(ifNull(notEquals(bitAnd(steps_bitfield, 2), 0), 1)) AS step_2,
            groupArrayIf(timings[1], ifNull(greater(timings[1], 0), 0)) AS step_1_conversion_times,
            groupArrayIf(arraySum(timings), ifNull(greaterOrEquals(step_reached, 1), 0)) AS total_conversion_times,
            rowNumberInAllBlocks() AS row_number,
            breakdown AS final_prop
     FROM
       (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), uuid, arrayMap(x -> ifNull(x, ''), prop_basic), arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1)])))) AS events_array,
               argMinIf(prop_basic, timestamp, notEmpty(arrayFilter(x -> notEmpty(x), prop_basic))) AS prop,
               arrayJoin(aggregate_funnel_array(2, 1209600, 'first_touch', 'ordered', [if(empty(prop), [''], prop)], [], arrayFilter((x, x_before, x_after) -> not(and(lessOrEquals(length(x.4), 1), equals(x.4, x_before.4), equals(x.4, x_after.4), equals(x.3, x_before.3), equals(x.3, x_after.3), ifNull(greater(x.1, x_before.1), 0), ifNull(less(x.1, x_after.1), 0))), events_array, arrayRotateRight(events_array, 1), arrayRotateLeft(events_array, 1)))) AS af_tuple,
               af_tuple.1 AS step_reached,
               plus(af_tuple.1, 1) AS steps,
               af_tuple.2 AS breakdown,
               af_tuple.3 AS timings,
               af_tuple.5 AS steps_bitfield,
               aggregation_target AS aggregation_target
        FROM
          (SELECT toTimeZone(e.timestamp, 'UTC') AS timestamp,
                  if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
                  e.uuid AS uuid,
                  e.`$session_id` AS `$session_id`,
                  e.`$window_id` AS `$window_id`,
                  if(equals(e.event, 'user signed up'), 1, 0) AS step_0,
                  if(equals(e.event, 'user did things'), 1, 0) AS step_1,
                  ([e__person.properties___fish] AS value) AS prop_basic,
                  prop_basic AS prop
           FROM events AS e
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
           LEFT JOIN
             (SELECT person.id AS id,
                     replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'fish'), ''), 'null'), '^"|"$', '') AS properties___fish
              FROM person
              WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                            (SELECT person.id AS id, max(person.version) AS version
                                                             FROM person
                                                             WHERE equals(person.team_id, 99999)
                                                             GROUP BY person.id
                                                             HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
           WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), in(e.event, tuple('user did things', 'user signed up')), ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0)), or(equals(step_0, 1), equals(step_1, 1))))
        GROUP BY aggregation_target
        HAVING ifNull(greaterOrEquals(step_reached, 0), 0))
     GROUP BY breakdown
     ORDER BY step_2 DESC,
              step_1 DESC)
  GROUP BY final_prop
  ORDER BY step_2 DESC,
           step_1 DESC
  LIMIT 100 SETTINGS join_algorithm='auto',
                     readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=23622320128,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_funnels_insightsql_global_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT sum(step_1) AS step_1,
         sum(step_2) AS step_2,
         arrayMap(x -> if(isNaN(x), NULL, x), [avgArrayOrNull(step_1_conversion_times)])[1] AS step_1_average_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [medianArrayOrNull(step_1_conversion_times)])[1] AS step_1_median_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [arrayReduce('median', arrayFlatten(groupArray(arrayFlatten(groupArray(total_conversion_times))) OVER ()))])[1] AS total_median_conversion_time,
         groupArray(row_number) AS row_number,
         final_prop AS final_prop
  FROM
    (SELECT countIf(ifNull(notEquals(bitAnd(steps_bitfield, 1), 0), 1)) AS step_1,
            countIf(ifNull(notEquals(bitAnd(steps_bitfield, 2), 0), 1)) AS step_2,
            groupArrayIf(timings[1], ifNull(greater(timings[1], 0), 0)) AS step_1_conversion_times,
            groupArrayIf(arraySum(timings), ifNull(greaterOrEquals(step_reached, 1), 0)) AS total_conversion_times,
            rowNumberInAllBlocks() AS row_number,
            breakdown AS final_prop
     FROM
       (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), uuid, '', arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1)])))) AS events_array,
               [''] AS prop,
               arrayJoin(aggregate_funnel(2, 1209600, 'first_touch', 'ordered', prop, [], arrayFilter((x, x_before, x_after) -> not(and(lessOrEquals(length(x.4), 1), equals(x.4, x_before.4), equals(x.4, x_after.4), equals(x.3, x_before.3), equals(x.3, x_after.3), ifNull(greater(x.1, x_before.1), 0), ifNull(less(x.1, x_after.1), 0))), events_array, arrayRotateRight(events_array, 1), arrayRotateLeft(events_array, 1)))) AS af_tuple,
               af_tuple.1 AS step_reached,
               plus(af_tuple.1, 1) AS steps,
               af_tuple.2 AS breakdown,
               af_tuple.3 AS timings,
               af_tuple.5 AS steps_bitfield,
               aggregation_target AS aggregation_target
        FROM
          (SELECT toTimeZone(e.timestamp, 'UTC') AS timestamp,
                  if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
                  e.uuid AS uuid,
                  e.`$session_id` AS `$session_id`,
                  e.`$window_id` AS `$window_id`,
                  if(equals(e.event, 'user signed up'), 1, 0) AS step_0,
                  if(equals(e.event, 'user did things'), 1, 0) AS step_1
           FROM events AS e
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
           LEFT JOIN
             (SELECT person.id AS id,
                     replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'fish'), ''), 'null'), '^"|"$', '') AS properties___fish
              FROM person
              WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                            (SELECT person.id AS id, max(person.version) AS version
                                                             FROM person
                                                             WHERE equals(person.team_id, 99999)
                                                             GROUP BY person.id
                                                             HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
           WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), in(e.event, tuple('user did things', 'user signed up')), and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), ifNull(like(e__person.properties___fish, '%fish%'), 0))), or(equals(step_0, 1), equals(step_1, 1))))
        GROUP BY aggregation_target
        HAVING ifNull(greaterOrEquals(step_reached, 0), 0))
     GROUP BY breakdown
     ORDER BY step_2 DESC,
              step_1 DESC)
  GROUP BY final_prop
  ORDER BY step_2 DESC,
           step_1 DESC
  LIMIT 100 SETTINGS join_algorithm='auto',
                     readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=23622320128,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_funnels_insightsql_local_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT sum(step_1) AS step_1,
         sum(step_2) AS step_2,
         arrayMap(x -> if(isNaN(x), NULL, x), [avgArrayOrNull(step_1_conversion_times)])[1] AS step_1_average_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [medianArrayOrNull(step_1_conversion_times)])[1] AS step_1_median_conversion_time,
         arrayMap(x -> if(isNaN(x), NULL, x), [arrayReduce('median', arrayFlatten(groupArray(arrayFlatten(groupArray(total_conversion_times))) OVER ()))])[1] AS total_median_conversion_time,
         groupArray(row_number) AS row_number,
         final_prop AS final_prop
  FROM
    (SELECT countIf(ifNull(notEquals(bitAnd(steps_bitfield, 1), 0), 1)) AS step_1,
            countIf(ifNull(notEquals(bitAnd(steps_bitfield, 2), 0), 1)) AS step_2,
            groupArrayIf(timings[1], ifNull(greater(timings[1], 0), 0)) AS step_1_conversion_times,
            groupArrayIf(arraySum(timings), ifNull(greaterOrEquals(step_reached, 1), 0)) AS total_conversion_times,
            rowNumberInAllBlocks() AS row_number,
            breakdown AS final_prop
     FROM
       (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), uuid, '', arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1)])))) AS events_array,
               [''] AS prop,
               arrayJoin(aggregate_funnel(2, 1209600, 'first_touch', 'ordered', prop, [], arrayFilter((x, x_before, x_after) -> not(and(lessOrEquals(length(x.4), 1), equals(x.4, x_before.4), equals(x.4, x_after.4), equals(x.3, x_before.3), equals(x.3, x_after.3), ifNull(greater(x.1, x_before.1), 0), ifNull(less(x.1, x_after.1), 0))), events_array, arrayRotateRight(events_array, 1), arrayRotateLeft(events_array, 1)))) AS af_tuple,
               af_tuple.1 AS step_reached,
               plus(af_tuple.1, 1) AS steps,
               af_tuple.2 AS breakdown,
               af_tuple.3 AS timings,
               af_tuple.5 AS steps_bitfield,
               aggregation_target AS aggregation_target
        FROM
          (SELECT toTimeZone(e.timestamp, 'UTC') AS timestamp,
                  if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
                  e.uuid AS uuid,
                  e.`$session_id` AS `$session_id`,
                  e.`$window_id` AS `$window_id`,
                  if(and(equals(e.event, 'user signed up'), and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), ifNull(like(e__person.properties___fish, '%fish%'), 0))), 1, 0) AS step_0,
                  if(and(equals(e.event, 'user did things'), and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), ifNull(like(e__person.properties___fish, '%fish%'), 0))), 1, 0) AS step_1
           FROM events AS e
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
           LEFT JOIN
             (SELECT person.id AS id,
                     replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'fish'), ''), 'null'), '^"|"$', '') AS properties___fish
              FROM person
              WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                            (SELECT person.id AS id, max(person.version) AS version
                                                             FROM person
                                                             WHERE equals(person.team_id, 99999)
                                                             GROUP BY person.id
                                                             HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
           WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(e.timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), in(e.event, tuple('user did things', 'user signed up'))), or(equals(step_0, 1), equals(step_1, 1))))
        GROUP BY aggregation_target
        HAVING ifNull(greaterOrEquals(step_reached, 0), 0))
     GROUP BY breakdown
     ORDER BY step_2 DESC,
              step_1 DESC)
  GROUP BY final_prop
  ORDER BY step_2 DESC,
           step_1 DESC
  LIMIT 100 SETTINGS join_algorithm='auto',
                     readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=23622320128,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_trend_insightsql_breakdown
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(1)(date)[1] AS date,
                      arrayFold((acc, x) -> arrayMap(i -> plus(acc[i], x[i]), range(1, plus(length(date), 1))), groupArray(ifNull(total, 0)), arrayWithConstant(length(date), reinterpretAsFloat64(0))) AS total,
                      if(ifNull(greaterOrEquals(row_number, 25), 0), '$$_insights_breakdown_other_$$', breakdown_value) AS breakdown_value
  FROM
    (SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
            arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                      and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total,
            breakdown_value AS breakdown_value,
            rowNumberInAllBlocks() AS row_number
     FROM
       (SELECT sum(total) AS count,
               day_start AS day_start,
               breakdown_value AS breakdown_value
        FROM
          (SELECT count() AS total,
                  toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
                  ifNull(nullIf(leftUTF8(toString(if(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 'le%ss', 'more')), 400), ''), '$$_insights_breakdown_null_$$') AS breakdown_value
           FROM events AS e
           WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC'))), equals(e.event, '$pageview'))
           GROUP BY day_start,
                    breakdown_value)
        GROUP BY day_start,
                 breakdown_value
        ORDER BY day_start ASC,
                 breakdown_value ASC)
     GROUP BY breakdown_value
     ORDER BY if(ifNull(equals(breakdown_value, '$$_insights_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_insights_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(total) DESC, breakdown_value ASC)
  WHERE isNotNull(breakdown_value)
  GROUP BY breakdown_value
  ORDER BY if(ifNull(equals(breakdown_value, '$$_insights_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_insights_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(total) DESC, breakdown_value ASC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_trend_insightsql_global_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start
        FROM events AS e
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC'))), equals(e.event, '$pageview'))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_trend_insightsql_global_filters.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'fish'), ''), 'null'), '^"|"$', '') AS properties___fish
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC'))), equals(e.event, '$pageview'), and(ifNull(greater(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), ifNull(like(e__person.properties___fish, '%fish%'), 0)))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_insight_trend_insightsql_local_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'fish'), ''), 'null'), '^"|"$', '') AS properties___fish
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2012-01-08 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2012-01-15 23:59:59', 'UTC'))), equals(e.event, '$pageview'), and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), ifNull(like(e__person.properties___fish, '%fish%'), 0)))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.1
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.10
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'insight'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.11
  '''
  SELECT "insights_dashboardtile"."id",
         "insights_dashboardtile"."dashboard_id",
         "insights_dashboardtile"."insight_id",
         "insights_dashboardtile"."text_id",
         "insights_dashboardtile"."button_tile_id",
         "insights_dashboardtile"."widget_id",
         "insights_dashboardtile"."team_id",
         "insights_dashboardtile"."layouts",
         "insights_dashboardtile"."color",
         "insights_dashboardtile"."filters_hash",
         "insights_dashboardtile"."last_refresh",
         "insights_dashboardtile"."refreshing",
         "insights_dashboardtile"."refresh_attempt",
         "insights_dashboardtile"."filters_overrides",
         "insights_dashboardtile"."show_description",
         "insights_dashboardtile"."transparent_background",
         "insights_dashboardtile"."deleted"
  FROM "insights_dashboardtile"
  INNER JOIN "insights_dashboard" ON ("insights_dashboardtile"."dashboard_id" = "insights_dashboard"."id")
  WHERE (NOT ("insights_dashboardtile"."deleted"
              AND "insights_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("insights_dashboard"."deleted")
         AND "insights_dashboardtile"."insight_id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.12
  '''
  SELECT "insights_dashboardtile"."id",
         "insights_dashboardtile"."dashboard_id",
         "insights_dashboardtile"."insight_id",
         "insights_dashboardtile"."text_id",
         "insights_dashboardtile"."button_tile_id",
         "insights_dashboardtile"."widget_id",
         "insights_dashboardtile"."team_id",
         "insights_dashboardtile"."layouts",
         "insights_dashboardtile"."color",
         "insights_dashboardtile"."filters_hash",
         "insights_dashboardtile"."last_refresh",
         "insights_dashboardtile"."refreshing",
         "insights_dashboardtile"."refresh_attempt",
         "insights_dashboardtile"."filters_overrides",
         "insights_dashboardtile"."show_description",
         "insights_dashboardtile"."transparent_background",
         "insights_dashboardtile"."deleted"
  FROM "insights_dashboardtile"
  INNER JOIN "insights_dashboard" ON ("insights_dashboardtile"."dashboard_id" = "insights_dashboard"."id")
  WHERE (NOT ("insights_dashboardtile"."deleted"
              AND "insights_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("insights_dashboard"."deleted")
         AND "insights_dashboardtile"."insight_id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.13
  '''
  SELECT "insights_insightvariable"."created_by_id",
         "insights_insightvariable"."created_at",
         "insights_insightvariable"."updated_at",
         "insights_insightvariable"."id",
         "insights_insightvariable"."team_id",
         "insights_insightvariable"."name",
         "insights_insightvariable"."code_name",
         "insights_insightvariable"."type",
         "insights_insightvariable"."default_value",
         "insights_insightvariable"."values"
  FROM "insights_insightvariable"
  WHERE "insights_insightvariable"."team_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.14
  '''
  SELECT "insights_dashboardtile"."dashboard_id" AS "dashboard_id"
  FROM "insights_dashboardtile"
  INNER JOIN "insights_dashboard" ON ("insights_dashboardtile"."dashboard_id" = "insights_dashboard"."id")
  WHERE (NOT ("insights_dashboardtile"."deleted"
              AND "insights_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("insights_dashboard"."deleted")
         AND "insights_dashboardtile"."insight_id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.15
  '''
  SELECT "insights_dashboard"."id",
         "insights_dashboard"."name",
         "insights_dashboard"."description",
         "insights_dashboard"."team_id",
         "insights_dashboard"."pinned",
         "insights_dashboard"."created_at",
         "insights_dashboard"."created_by_id",
         "insights_dashboard"."deleted",
         "insights_dashboard"."last_accessed_at",
         "insights_dashboard"."last_refresh",
         "insights_dashboard"."filters",
         "insights_dashboard"."variables",
         "insights_dashboard"."breakdown_colors",
         "insights_dashboard"."data_color_theme_id",
         "insights_dashboard"."creation_mode",
         "insights_dashboard"."restriction_level",
         "insights_dashboard"."quick_filter_ids",
         "insights_dashboard"."deprecated_tags",
         "insights_dashboard"."tags",
         "insights_dashboard"."share_token",
         "insights_dashboard"."is_shared"
  FROM "insights_dashboard"
  WHERE (NOT ("insights_dashboard"."deleted")
         AND "insights_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.16
  '''
  SELECT "insights_tag"."name" AS "tag__name"
  FROM "insights_taggeditem"
  INNER JOIN "insights_tag" ON ("insights_taggeditem"."tag_id" = "insights_tag"."id")
  WHERE "insights_taggeditem"."insight_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.17
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_dashboarditem"
  WHERE NOT ("insights_dashboarditem"."deleted")
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.18
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.19
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.2
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.20
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.21
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.22
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "insights_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "insights_team" ON ("ee_accesscontrol"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.23
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.24
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_dashboarditem"
  INNER JOIN "insights_team" ON ("insights_dashboarditem"."team_id" = "insights_team"."id")
  WHERE ("insights_team"."project_id" = 99999
         AND NOT ("insights_dashboarditem"."deleted"))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.25
  '''
  SELECT "insights_dashboarditem"."id",
         "insights_dashboarditem"."name",
         "insights_dashboarditem"."derived_name",
         "insights_dashboarditem"."description",
         "insights_dashboarditem"."team_id",
         "insights_dashboarditem"."filters",
         "insights_dashboarditem"."filters_hash",
         "insights_dashboarditem"."query",
         "insights_dashboarditem"."query_metadata",
         "insights_dashboarditem"."order",
         "insights_dashboarditem"."deleted",
         "insights_dashboarditem"."saved",
         "insights_dashboarditem"."created_at",
         "insights_dashboarditem"."refreshing",
         "insights_dashboarditem"."created_by_id",
         "insights_dashboarditem"."is_sample",
         "insights_dashboarditem"."short_id",
         "insights_dashboarditem"."favorited",
         "insights_dashboarditem"."refresh_attempt",
         "insights_dashboarditem"."last_modified_at",
         "insights_dashboarditem"."last_modified_by_id",
         "insights_dashboarditem"."dashboard_id",
         "insights_dashboarditem"."last_refresh",
         "insights_dashboarditem"."layouts",
         "insights_dashboarditem"."color",
         "insights_dashboarditem"."dive_dashboard_id",
         "insights_dashboarditem"."updated_at",
         "insights_dashboarditem"."deprecated_tags",
         "insights_dashboarditem"."tags",
  
    (SELECT U0."last_viewed_at" AS "last_viewed_at"
     FROM "insights_insightviewed" U0
     WHERE U0."insight_id" = ("insights_dashboarditem"."id")
     ORDER BY 1 DESC
     LIMIT 1) AS "last_viewed_at",
         "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_dashboarditem"
  INNER JOIN "insights_team" ON ("insights_dashboarditem"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_dashboarditem"."created_by_id" = "insights_user"."id")
  WHERE ("insights_team"."project_id" = 99999
         AND NOT ("insights_dashboarditem"."deleted"))
  ORDER BY "insights_dashboarditem"."order" ASC
  LIMIT 100
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.26
  '''
  SELECT "insights_dashboardtile"."id",
         "insights_dashboardtile"."dashboard_id",
         "insights_dashboardtile"."insight_id",
         "insights_dashboardtile"."deleted"
  FROM "insights_dashboardtile"
  INNER JOIN "insights_dashboard" ON ("insights_dashboardtile"."dashboard_id" = "insights_dashboard"."id")
  WHERE (NOT ("insights_dashboardtile"."deleted"
              AND "insights_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("insights_dashboard"."deleted")
         AND "insights_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.27
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id",
         "insights_taggeditem"."ticket_id",
         "insights_taggeditem"."account_id",
         "insights_taggeditem"."endpoint_id"
  FROM "insights_taggeditem"
  WHERE "insights_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.28
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id",
         "insights_taggeditem"."ticket_id",
         "insights_taggeditem"."account_id",
         "insights_taggeditem"."endpoint_id",
         "insights_tag"."id",
         "insights_tag"."name",
         "insights_tag"."team_id"
  FROM "insights_taggeditem"
  INNER JOIN "insights_tag" ON ("insights_taggeditem"."tag_id" = "insights_tag"."id")
  WHERE "insights_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.3
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.4
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "insights_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "insights_team" ON ("ee_accesscontrol"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.5
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.6
  '''
  SELECT "insights_dashboard"."id",
         "insights_dashboard"."name",
         "insights_dashboard"."description",
         "insights_dashboard"."team_id",
         "insights_dashboard"."pinned",
         "insights_dashboard"."created_at",
         "insights_dashboard"."created_by_id",
         "insights_dashboard"."deleted",
         "insights_dashboard"."last_accessed_at",
         "insights_dashboard"."last_refresh",
         "insights_dashboard"."filters",
         "insights_dashboard"."variables",
         "insights_dashboard"."breakdown_colors",
         "insights_dashboard"."data_color_theme_id",
         "insights_dashboard"."creation_mode",
         "insights_dashboard"."restriction_level",
         "insights_dashboard"."quick_filter_ids",
         "insights_dashboard"."deprecated_tags",
         "insights_dashboard"."tags",
         "insights_dashboard"."share_token",
         "insights_dashboard"."is_shared"
  FROM "insights_dashboard"
  INNER JOIN "insights_team" ON ("insights_dashboard"."team_id" = "insights_team"."id")
  WHERE (NOT ("insights_dashboard"."deleted")
         AND ("insights_dashboard"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "insights_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("insights_team"."parent_team_id" IS NULL
                  AND "insights_dashboard"."team_id" = 99999))
         AND "insights_dashboard"."id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.7
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_dashboardtile"
  INNER JOIN "insights_dashboard" ON ("insights_dashboardtile"."dashboard_id" = "insights_dashboard"."id")
  WHERE (NOT ("insights_dashboardtile"."deleted"
              AND "insights_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("insights_dashboard"."deleted")
         AND "insights_dashboardtile"."dashboard_id" = 99999
         AND NOT ("insights_dashboardtile"."deleted"
                  AND "insights_dashboardtile"."deleted" IS NOT NULL))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.8
  '''
  SELECT "insights_dashboard"."id",
         "insights_dashboard"."name",
         "insights_dashboard"."description",
         "insights_dashboard"."team_id",
         "insights_dashboard"."pinned",
         "insights_dashboard"."created_at",
         "insights_dashboard"."created_by_id",
         "insights_dashboard"."deleted",
         "insights_dashboard"."last_accessed_at",
         "insights_dashboard"."last_refresh",
         "insights_dashboard"."filters",
         "insights_dashboard"."variables",
         "insights_dashboard"."breakdown_colors",
         "insights_dashboard"."data_color_theme_id",
         "insights_dashboard"."creation_mode",
         "insights_dashboard"."restriction_level",
         "insights_dashboard"."quick_filter_ids",
         "insights_dashboard"."deprecated_tags",
         "insights_dashboard"."tags",
         "insights_dashboard"."share_token",
         "insights_dashboard"."is_shared"
  FROM "insights_dashboard"
  WHERE (NOT ("insights_dashboard"."deleted")
         AND "insights_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.9
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
